--- a/style.css
+++ b/style.css
@@ -49,3 +49,8 @@ main h2 {
     background-color: green;
     color: white;
 }
+.my-style {
+        color: aquamarine;
+        background-color: black;
+        padding: 3px;
+}
